--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <nav class="nav-h">
+        <nav class="nav-h-desktop">
             <ul>
                 <li style="border: none;">
                     <a href="">
@@ -45,6 +45,31 @@
         </nav>
         
     </header>
+
+    <div class="botao-menu" onclick="openNav()">
+        <i class="fas fa-bars fa-3x fa-fw"></i>
+    </div>
+
+    <nav id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <ul>
+            <li style="border: none;">
+                <a href="">
+                    <i class="fas fa-home fa-xl fa-fw"></i> Home
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <i class="fas fa-dollar-sign"></i> Comprar
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <i class="fas fa-user fa-xl fa-fw"></i> Login
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <div class="parallax1"></div>
 
@@ -148,7 +173,7 @@
 
     </section>
     
-        <div class="parallax2"></div>
+    <div class="parallax2"></div>
 
     <footer class="redes-sociais">
         <div>
