Interfaces criadas, agora resta apenas a logica

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <nav class="nav-h-desktop">
             <ul>
                 <li style="border: none;">
-                    <a href="">
+                    <a href="index.html">
                         <i class="fas fa-home fa-xl fa-fw"></i> Home
                     </a>
 
                 </li>
                 <li>
-                    <a href="">
+                    <a href="comprar.php">
                         <i class="fas fa-dollar-sign"></i> Comprar
                     </a>
                 </li>
@@ -50,21 +50,21 @@
         <i class="fas fa-bars fa-3x fa-fw"></i>
     </div>
 
-    <nav id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <nav id="Sidenav" class="sidenav">
+        <a class="closebtn" onclick="closeNav()">&times;</a>
         <ul>
-            <li style="border: none;">
-                <a href="">
+            <li>
+                <a href="index.html">
                     <i class="fas fa-home fa-xl fa-fw"></i> Home
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="comprar.php">
                     <i class="fas fa-dollar-sign"></i> Comprar
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="login.php">
                     <i class="fas fa-user fa-xl fa-fw"></i> Login
                 </a>
             </li>
@@ -113,9 +113,6 @@
                     Doces
                 </th>
                 <th>
-                    Sabor                
-                </th>
-                <th>
                     Preço
                 </th>
             </tr>
@@ -123,9 +120,6 @@
             <tr>
                 <td>
                     Bolo
-                </td>
-                <td>
-                    Chocolate
                 </td>
                 <td>
                     R$ 20,00
@@ -137,9 +131,6 @@
                     Escondidinho
                 </td>
                 <td>
-                    Uva
-                </td>
-                <td>
                     R$ 15,00
                 </td>
             </tr>
@@ -147,9 +138,6 @@
             <tr>
                 <td>
                     Panettone
-                </td>
-                <td>
-                    Nutella
                 </td>
                 <td>
                     R$ 30,00
@@ -165,11 +153,11 @@
 
         <iframe width="auto" height="" src="https://www.youtube.com/embed/FTBuvtrMHiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-        <form class="sugestao">
+        <fieldset class="sugestao">
             <label for="sugestao">Deseja algum sabor diferente? Nos diga qual!</label>
             <input type="text" name="sugestao">
-            <button type="">Enviar</button>
-        </form>
+            <button type="" >Enviar</button>
+        </fieldset>
 
     </section>
     
