fazer sistema de login, enviar pedido, e visualizar

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <fieldset class="sugestao">
             <label for="sugestao">Deseja algum sabor diferente? Nos diga qual!</label>
             <input type="text" name="sugestao">
-            <button type="" >Enviar</button>
+            <button type="button" onclick="alert('Muito Obrigado')">Enviar</button>
         </fieldset>
 
     </section>
