Todos os bancos de dados criados, agora falta apenas a tela de login

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="login.php">
                         <i class="fas fa-user fa-xl fa-fw"></i> Login
                     </a>
                 </li>
@@ -152,12 +152,6 @@
     <section class="corpo-linaDoces">
 
         <iframe width="auto" height="" src="https://www.youtube.com/embed/FTBuvtrMHiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        <fieldset class="sugestao">
-            <label for="sugestao">Deseja algum sabor diferente? Nos diga qual!</label>
-            <input type="text" name="sugestao">
-            <button type="button" onclick="alert('Muito Obrigado')">Enviar</button>
-        </fieldset>
 
     </section>
     
