--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lina Doces</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
-        crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Dancing+Script|Indie+Flower|Open+Sans|Pacifico" rel="stylesheet">
 </head>
 
@@ -16,8 +14,6 @@
 
     <header class="header">
         <div class="logo-site" style="display:flex; align-items: center;">
-            <div class="logo-header"><i class="fas fa-cookie-bite fa-4x fa-fw"></i></i></div>
-
             <div class="nome-header">
                 <a href="index.html">Confeitaria Lina Doces</a>
             </div>
@@ -27,18 +23,18 @@
             <ul>
                 <li style="border: none;">
                     <a href="index.html">
-                        <i class="fas fa-home fa-xl fa-fw"></i> Home
+                        Home
                     </a>
 
                 </li>
                 <li>
                     <a href="comprar.php">
-                        <i class="fas fa-dollar-sign"></i> Comprar
+                        Comprar
                     </a>
                 </li>
                 <li>
                     <a href="login.php">
-                        <i class="fas fa-user fa-xl fa-fw"></i> Login
+                        Login
                     </a>
                 </li>
             </ul>
@@ -47,7 +43,9 @@
     </header>
 
     <div class="botao-menu" onclick="openNav()">
-        <i class="fas fa-bars fa-3x fa-fw"></i>
+        <div class="botao-menu-icone"></div>
+        <div class="botao-menu-icone"></div>
+        <div class="botao-menu-icone"></div>
     </div>
 
     <nav id="Sidenav" class="sidenav">
@@ -55,17 +53,17 @@
         <ul>
             <li>
                 <a href="index.html">
-                    <i class="fas fa-home fa-xl fa-fw"></i> Home
+                    Home
                 </a>
             </li>
             <li>
                 <a href="comprar.php">
-                    <i class="fas fa-dollar-sign"></i> Comprar
+                    Comprar
                 </a>
             </li>
             <li>
                 <a href="login.php">
-                    <i class="fas fa-user fa-xl fa-fw"></i> Login
+                    Login
                 </a>
             </li>
         </ul>
@@ -157,42 +155,7 @@
     
     <div class="parallax2"></div>
 
-    <footer class="redes-sociais">
-        <div>
-            <ul>
-                <li>
-                    <a href="https://www.facebook.com/profile.php?id=1494374027&__tn__=%2CdC-R-R&eid=ARDXMx0FgYnB0PVPucYovumEo3BTzx_W7xRLNB9JyN5MGNExt_ken7hw1vFMESwWzG0xYPYSkw8fDn5Z&hc_ref=ARTeIICvsuMXJ3XEyRxcDL77TPRnwhARC23A5RF-wozgGp5hRSGpPcV7XiXHkwpWZmo&fref=nf">
-                        <div class="botoes-redes">
-                            <i class="fab fa-facebook-square fa-7x fa-fw"></i>
-                            <h2>Elisa Santos</h2>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <div class="botoes-redes">
-                        <a href="https://www.instagram.com/confeitarialinadoces/?hl=en">
-                            <i class="fab fa-instagram fa-7x fa-fw"></i>
-                            <h2>@confeitarialinadoces</h2>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="botoes-redes">
-                        <i class="fab fa-whatsapp-square fa-7x fa-fw"></i>
-                        <h2>(11)97589-1929</h2>
-                    </div>
-                </li>
-                <li>
-                    <div class="botoes-redes">
-                        <a href="">
-                            <i class="fas fa-envelope-square fa-7x fa-fw"></i>
-                            <h2>Falta o email</h2>
-                        </a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-
+    <footer class="rodape">
         <p>Todos os direitos reservados, <strong>Lucas Vinicius</strong>. 2019</p>
     </footer>
 
