--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lina Doces</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- São fontes externas -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Dancing+Script|Indie+Flower|Open+Sans|Pacifico" rel="stylesheet">
 </head>
 
@@ -39,7 +40,6 @@
                 </li>
             </ul>
         </nav>
-        
     </header>
 
     <div class="botao-menu" onclick="openNav()">
@@ -48,6 +48,7 @@
         <div class="botao-menu-icone"></div>
     </div>
 
+    <!-- NAVEGAÇÃO MOBILE -->
     <nav id="Sidenav" class="sidenav">
         <a class="closebtn" onclick="closeNav()">&times;</a>
         <ul>
@@ -72,7 +73,6 @@
     <div class="parallax1"></div>
 
     <section class="corpo-linaDoces">
-
         <img class="Lina" src="imagens/LinaDoces.jpeg">
 
         <div class="caixa">
@@ -149,7 +149,7 @@
 
     <section class="corpo-linaDoces">
 
-        <iframe width="auto" height="" src="https://www.youtube.com/embed/FTBuvtrMHiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="auto" src="https://www.youtube.com/embed/FTBuvtrMHiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </section>
     
